tests/baselines/reference/YieldExpression14_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression14_es6.ts(3,6): error TS1163: 'yield' expression must be contained_within a generator declaration.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression14_es6.ts (1 errors) ====
    class C {
      foo() {
         yield foo
         ~~~~~
!!! error TS1163: 'yield' expression must be contained_within a generator declaration.
      }
    }